# SimpleGLES

./: GitHubNotes.txt  README.md
GLESLearn1/: README.md  settings.gradle
GLESLearn1/app/: build.gradle
GLESLearn1/app/src/androidTest/java/com/example/gleslearn1/: ExampleInstrumentedTest.java
GLESLearn1/app/src/main/: AndroidManifest.xml
GLESLearn1/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
GLESLearn1/app/src/main/cpp/examples/HelloTriangle/: Triangle.cpp  Triangle.h
GLESLearn1/app/src/main/cpp/jni/: glnative-lib.cpp
GLESLearn1/app/src/main/cpp/utils/: GLUtils.cpp  GLUtils.h
GLESLearn1/app/src/main/java/com/example/gleslearn1/: BaseGLActivity.java  HelloTriangeActivity.java  HelloTriangleActivity.java  HelloTriangleRenderer.java  MainActivity.java
GLESLearn1/app/src/main/res/values/: strings.xml  themes.xml
GLESLearn1/app/src/main/res/values-night/: themes.xml
GLESLearn1/app/src/test/java/com/example/gleslearn1/: ExampleUnitTest.java
GLESLearn1/gradle/wrapper/: gradle-wrapper.properties
GLES_Cube/: settings.gradle
GLES_Cube/app/: build.gradle
GLES_Cube/app/src/androidTest/java/com/example/gles_cube/: ExampleInstrumentedTest.java
GLES_Cube/app/src/main/: AndroidManifest.xml
GLES_Cube/app/src/main/assets/shader/: cube.frag  cube.vert  light.frag
GLES_Cube/app/src/main/cpp/: CMakeLists.txt  glnative_lib.cpp
GLES_Cube/app/src/main/cpp/examples/: Cube.cpp  Cube.h
GLES_Cube/app/src/main/cpp/utils/: GLUtils.cpp  GLUtils.h  TimeUtils.h
GLES_Cube/app/src/main/java/com/example/gles_cube/: BaseActivity.java  CubeActivity.java  CubeRenderer.java  MainActivity.java
GLES_Cube/app/src/main/res/values/: strings.xml  themes.xml
GLES_Cube/app/src/main/res/values-night/: themes.xml
GLES_Cube/app/src/test/java/com/example/gles_cube/: ExampleUnitTest.java
GLES_Cube/gradle/wrapper/: gradle-wrapper.properties
